# chexvision

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-pages.yml  deploy-space.yml
app/: app.py  sample_cases.py
configs/: default.yaml  scratch.yaml  transfer.yaml
docs/: .nojekyll  .thumbnail  README.md  index.html  report.css  report.html
docs/assets/: .gitkeep
docs/figures/: deck_figs.js  fig1_pipeline.js  fig2_seresnet.js  fig3_densenet.js  fig4_finetune.js  figures.html
docs/report/: report.html
kaggle/resize_320/: kernel-metadata.json  script.py
kaggle/train_numpy/: kernel-metadata.json  script.py
kaggle/train_scratch/: kernel-metadata.json  script.py
kaggle/train_transfer/: kernel-metadata.json  script.py
notebooks/: 01_eda.ipynb  02_train_scratch.ipynb  03_train_transfer.ipynb
scripts/: dispatch.py  eda.py  generate_diagram_pngs.py  push_models.py
src/: __init__.py
src/data/: __init__.py  dataset.py  download.py  resize_320_pipeline.py  transforms.py
src/models/: __init__.py  densenet_transfer.py  scratch_cnn.py
src/training/: evaluate.py  metrics.py  trainer.py
src/utils/: __init__.py  hub.py  visualization.py
tests/: test_app_bootstrap.py  test_dataset.py  test_dispatch.py  test_download.py  test_hub.py  test_metrics.py  test_models.py  test_resize_320_pipeline.py  test_transforms.py
